# fcitx5-fep-gemini-2.5-pro

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  event_loop.rs  fcitx.rs  main.rs  state.rs  terminal.rs
