# Cargo.toml
[package]
name = "fcitx5-fep-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
zbus = { version = "3", default-features = false, features = ["blocking", "serde"] }
serde = { version = "1", features = ["derive"] }
zvariant = "3"
zbus_macros = "3"
# crossterm を追加
crossterm = "0.27" # 最新バージョンを確認してください
