# Cargo.toml
[package]
name = "fcitx5-fep-rust"
version = "0.1.1"
# Rust Edition を 2021 に更新
edition = "2021"

[dependencies]
# zbus: async (tokio) support
zbus = { version = "3", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
zvariant = "3"
zbus_macros = "3"
# crossterm: async event stream support
crossterm = { version = "0.27", features = ["event-stream"] }
# Tokio runtime and utilities
tokio = { version = "1", features = ["full"] } # Using "full" for simplicity, can specify needed features
# Async stream utilities
futures-util = "0.3"
tokio-stream = "0.1"
